2011-01-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCralloc.hpp: do not include "sdccconf.h" directly, it does not
	  exist when building with MSVC. Let it come through SDCCglobl.h

2011-01-17 Borut Razem <borut.razem AT siol.net>

	* Merged from trunk

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Split validateOpType() into const and non-const version.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Some documenting comments.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Fixed some forgotten debug statements.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Fixed the allocator for gbz80.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/z80/tree_dec.hh,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Moved some generic parts of the new allocator out of the z80 directory.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Type fixes.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Preparations for the use of a better cost function and handling a, hl and iy in the new allocator.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.h,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Improved variable handling and C++ standard conformance.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Removed local assignment map.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  configure,
	  Makefile.common.in,
	  src/Makefile.in,
	  src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.h,