@@ -1,3 +1,9 @@
+2011-01-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
+	  Made operands in assign_cost() const.
+
 2011-01-17 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCralloc.hpp: do not include "sdccconf.h" directly, it does not
